--- a/index.html
+++ b/index.html
@@ -201,6 +201,67 @@
       color: #c1121f;
     }
 
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
+    }
+
+    .actions {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #333;
+    }
+
+    .action-group {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .action-label {
+      font-weight: 600;
+    }
+
+    .icon-btn {
+      border: 1px solid #ccc;
+      background: #fff;
+      border-radius: 4px;
+      padding: 6px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: background 0.2s ease, border-color 0.2s ease;
+      color: #333;
+    }
+
+    .icon-btn:hover {
+      background: #e2e6ea;
+      border-color: #b3b3b3;
+    }
+
+    .icon-btn:focus {
+      outline: 2px solid #0056b3;
+      outline-offset: 2px;
+    }
+
+    .icon-btn svg {
+      width: 18px;
+      height: 18px;
+      fill: currentColor;
+    }
+
     .thread-list li.new-thread-item {
       display: block;
       padding: 0;
@@ -227,26 +288,6 @@
 
     .new-thread-button:hover {
       background: #1c7e32;
-    }
-
-    .actions {
-      margin-top: 16px;
-    }
-
-    .actions button {
-      width: 100%;
-      margin-bottom: 8px;
-      padding: 8px;
-      background: #6c757d;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.9rem;
-    }
-
-    .actions button:hover {
-      background: #565e64;
     }
 
     .model-select-row button {
@@ -662,13 +703,83 @@
         <h3>Chats</h3>
       </div>
       <ul id="threadList" class="thread-list"></ul>
-      <div class="actions">
-        <button id="exportBtn">Export history</button>
-        <input type="file" id="importInput" accept="application/json" style="display: none;" />
-        <button id="importBtn">Import history</button>
-        <button id="exportConfigBtn">Export settings</button>
-        <input type="file" id="importConfigInput" accept="application/json" style="display: none;" />
-        <button id="importConfigBtn">Import settings</button>
+      <div class="actions" role="group" aria-label="Chat history and settings import and export">
+        <div class="action-group">
+          <span class="action-label">Chat history:</span>
+          <button
+            type="button"
+            id="exportBtn"
+            class="icon-btn"
+            title="Export chat history"
+            aria-label="Export chat history"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path
+                d="M12 3a1 1 0 0 1 1 1v7.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L11 11.586V4a1 1 0 0 1 1-1Z"
+              />
+              <path
+                d="M5 15a1 1 0 0 1 1 1v2h12v-2a1 1 0 1 1 2 0v3a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1Z"
+              />
+            </svg>
+            <span class="sr-only">Export chat history</span>
+          </button>
+          <button
+            type="button"
+            id="importBtn"
+            class="icon-btn"
+            title="Import chat history"
+            aria-label="Import chat history"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path
+                d="M12 21a1 1 0 0 1-1-1v-7.586l-2.293 2.293a1 1 0 0 1-1.414-1.414l4-4a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414L13 12.414V20a1 1 0 0 1-1 1Z"
+              />
+              <path
+                d="M19 9a1 1 0 0 1-1-1V6H6v2a1 1 0 0 1-2 0V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1Z"
+              />
+            </svg>
+            <span class="sr-only">Import chat history</span>
+          </button>
+          <input type="file" id="importInput" accept="application/json" style="display: none;" />
+        </div>
+        <div class="action-group">
+          <span class="action-label">Settings:</span>
+          <button
+            type="button"
+            id="exportConfigBtn"
+            class="icon-btn"
+            title="Export settings"
+            aria-label="Export settings"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path
+                d="M12 3a1 1 0 0 1 1 1v7.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L11 11.586V4a1 1 0 0 1 1-1Z"
+              />
+              <path
+                d="M5 15a1 1 0 0 1 1 1v2h12v-2a1 1 0 1 1 2 0v3a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1Z"
+              />
+            </svg>
+            <span class="sr-only">Export settings</span>
+          </button>
+          <button
+            type="button"
+            id="importConfigBtn"
+            class="icon-btn"
+            title="Import settings"
+            aria-label="Import settings"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path
+                d="M12 21a1 1 0 0 1-1-1v-7.586l-2.293 2.293a1 1 0 0 1-1.414-1.414l4-4a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414L13 12.414V20a1 1 0 0 1-1 1Z"
+              />
+              <path
+                d="M19 9a1 1 0 0 1-1-1V6H6v2a1 1 0 0 1-2 0V5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1Z"
+              />
+            </svg>
+            <span class="sr-only">Import settings</span>
+          </button>
+          <input type="file" id="importConfigInput" accept="application/json" style="display: none;" />
+        </div>
       </div>
     </aside>
     <div id="sidebarOverlay" aria-hidden="true"></div>
