Hide promo banner when dismissed

--- a/index.html
+++ b/index.html
@@ -346,6 +346,10 @@
       font-size: 0.9rem;
     }
 
+    .promo-banner[hidden] {
+      display: none;
+    }
+
     .promo-banner a {
       color: #7a5200;
       text-decoration: underline;
